--- a/src/components/showcomponent/style.less
+++ b/src/components/showcomponent/style.less
@@ -18,6 +18,7 @@
   .hljs-literal,
   .hljs-bullet,
   .hljs-link {
+    font-family: Menlo, Monaco, Consolas, Courier, monospace !important;
     color: @code-number-color!important;
   }
   .hljs-built_in,
@@ -25,6 +26,7 @@
   .hljs-name,
   .hljs-selector-tag,
   .hljs-tag {
+    font-family: Menlo, Monaco, Consolas, Courier, monospace !important;
     color: @primary-color!important;
   }
   .hljs-string,
@@ -33,13 +35,16 @@
   .hljs-template-tag,
   .hljs-template-variable,
   .hljs-addition {
+    font-family: Menlo, Monaco, Consolas, Courier, monospace !important;
     color: @code-string-color!important;
   }
   .hljs-subst,
   .hljs-attr {
+    font-family: Menlo, Monaco, Consolas, Courier, monospace !important;
     color: #000 !important;
   }
   .hljs-tag .hljs-attr {
+    font-family: Menlo, Monaco, Consolas, Courier, monospace !important;
     color: red!important;
   }
 
