--- a/VUI/theme/transition.less
+++ b/VUI/theme/transition.less
@@ -21,3 +21,18 @@
   opacity: 0;
   transform: translateX(100%);
 }
+.fade-up-enter-active,.fade-up-leave-active{
+  transition: all .2s ease;
+  transform-origin: center top;
+}
+.fade-up-enter,.fade-up-leave-to{
+  opacity: 0;
+  transform: scaleY(0);
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .2s;
+}
+.fade-enter, .fade-leave-to{
+  opacity: 0;
+}
